# Life-OS

./: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ai-integration.md  domain-model.md  persistence-layer.md
e2e/: app.spec.ts
src/: ai-reflections.ts  domain.test.ts  domain.ts  index.ts  persistence.test.ts  persistence.ts  schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/types/: better-sqlite3.d.ts
src/ui/: App.tsx  ai-utils.ts  api.ts  global.css  index.html  main.ts  main.tsx  store.ts  types.ts
src/ui/components/: Dashboard.tsx  Diary.tsx  Report.tsx  TaskManager.tsx
