[package]
name = "queenzy_lifeos"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "1.4.2", features = ["api-all"] }
